--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests --silent",
+    "test:staged": "npm test --passWithNoTests --findRelatedTests --silent",
+    "test:ci": "npm test -- --coverage --no-cache --runInBand",
     "prepare": "husky"
   },
   "keywords": [],
@@ -12,14 +14,19 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@swc/core": "^1.11.8",
+    "@swc/jest": "^0.2.37",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.3",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0"
   },
   "dependencies": {
     "@commitlint/cli": "^19.8.0",
