--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@shelf/jest-mongodb": "^5.1.0",
     "@swc/core": "^1.11.8",
     "@swc/jest": "^0.2.37",
     "@types/bcrypt": "^5.0.2",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.15.0"
   }
 }
