--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -19,11 +19,11 @@ jobs:
         run: |
           LAST_TAG=$(git tag --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | head -1)
           echo "Última versão encontrada: $LAST_TAG"
-          
+
           if [[ -z "$LAST_TAG" ]]; then
             NEW_VERSION="v1.0.0"
           else
-            # Quebra a string em partes MAJOR.MINOR.PATCH
+            # Quebrando a string em partes MAJOR.MINOR.PATCH
             IFS='.' read -r MAJOR MINOR PATCH <<<"${LAST_TAG//v/}"
 
             # Se o PATCH for menor que 10, apenas o incrementa
@@ -35,7 +35,7 @@ jobs:
               MINOR=$((MINOR + 1))
             fi
 
-            Se quiser que ao chegar em 10.10 passe para 2.0.0, descomente abaixo:
+            # Quando chegar em 10.10 passe para 2.0.0, descomente abaixo:
             if [[ "$MINOR" -eq 10 ]]; then
               MINOR=0
               MAJOR=$((MAJOR + 1))
@@ -43,7 +43,7 @@ jobs:
 
             NEW_VERSION="v$MAJOR.$MINOR.$PATCH"
           fi
-          
+
           echo "Nova versão: $NEW_VERSION"
           echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
@@ -51,6 +51,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
+
           git tag $VERSION
           git push https://x-access-token:${{ secrets.TAG_GITHUB_TOKEN }}@github.com/PauloHPMKT/api-comprasapp.git $VERSION
