chore: fix docker image ci

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,8 +13,15 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Wait to register tag
-        run: sleep 10
+      - name: Verificar se a tag foi criada corretamente
+        run: |
+          git fetch --tags
+          git tag -l
+          if [[ -z "$(git tag -l | grep $GITHUB_REF)" ]]; then
+            echo "Tag $GITHUB_REF não encontrada. A tag pode não ter sido empurrada corretamente."
+            exit 1
+          fi
+
 
       - name: Exctract version from tag
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
