--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.22.0",
