--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@shelf/jest-mongodb": "^5.1.0",
     "@swc/core": "^1.11.8",
     "@swc/jest": "^0.2.37",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
@@ -41,7 +41,7 @@
   "dependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
